--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.1
+  shared_preferences: ^2.0.15
   flutter_spinkit: ^5.1.0
   cloud_firestore: ^3.1.13
   firebase_core: ^1.15.0
